[tool.poetry]
name = "eugen"
version = "0.1.0"
description = "Tetten"
authors = ["Gillian Sampoux <gil.sampoux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
discord = "^2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
